--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "react"
   ],
   "rules": {
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "no-unused-expressions": "warn",
     "react/jsx-filename-extension": [
       1,
@@ -26,5 +26,8 @@
       }
     ],
     "import/prefer-default-export": "off"
+  },
+  "globals": {
+    "fetch": true
   }
 }
