--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dev-utils": "^9.0.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "rxjs": "^6.5.2"
   },
   "devDependencies": {
@@ -28,6 +30,8 @@
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "10.0.2",
@@ -61,6 +65,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
