--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
+    "test": "cross-env node scripts/test.js",
     "lint": "stylelint src",
     "lint:fix": "stylelint src --fix"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.9.0-4.12.11",
     "antd": "^3.21.4",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.2",
     "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
@@ -24,31 +26,35 @@
     "rxjs": "^6.5.2"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@svgr/webpack": "4.3.2",
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "16.8.5",
+    "@babel/core": "^7.5.5",
+    "@svgr/webpack": "^4.3.2",
+    "@types/express": "^4.17.0",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.1",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.6",
+    "babel-loader": "^8.0.6",
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-react-app": "^9.0.1",
     "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "concurrently": "^4.1.1",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
+    "dotenv-expand": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.0",
     "eslint-config-standard": "^13.0.1",
-    "eslint-loader": "2.2.1",
-    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-node": "^9.1.0",
@@ -56,39 +62,46 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "identity-obj-proxy": "3.0.0",
+    "express": "^4.17.1",
+    "file-loader": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs-extra": "^7.0.1",
+    "happypack": "^5.0.1",
+    "html-webpack-plugin": "^4.0.0-beta.5",
+    "identity-obj-proxy": "^3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.8.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest": "^24.8.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-resolve": "24.8.0",
-    "jest-watch-typeahead": "0.3.1",
+    "jest-watch-typeahead": "^0.3.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^8.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^4.0.1",
     "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.2.0",
     "semver": "6.3.0",
-    "style-loader": "1.0.0",
+    "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.2",
-    "typescript": "3.5.3",
+    "terser-webpack-plugin": "^1.4.1",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
     "url-loader": "2.1.0",
-    "webpack": "4.39.1",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.0.4",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
