--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
     "antd": "^3.21.4",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.2",
