--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot \" \"cross-env nodemon mock/server.js \"",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
-    "lint": "stylelint src",
-    "lint:fix": "stylelint src --fix"
+    "lint": "yarn lint:eslint && yarn lint:style",
+    "lint:eslint": "eslint --ext .jsx,.js,.ts,.tsx src",
+    "lint:style": "stylelint src",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:style --fix"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
