--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
+    "ant-design-pro": "^2.3.2",
     "antd": "^3.21.4",
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
+    "react-async-component": "^2.0.0",
     "react-dev-utils": "^9.0.2",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
