--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
+    "@sentry/browser": "^5.6.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^3.21.4",
     "axios": "^0.19.0",
+    "debug": "^4.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@svgr/webpack": "^4.3.2",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
