--- a/.eslintrc
+++ b/.eslintrc
@@ -29,9 +29,11 @@
     "import/prefer-default-export": "off"
   },
   "globals": {
-    "fetch": true
+    "fetch": true,
+    "DEBUG": true
   },
   "env": {
-    "jest": true
+    "jest": true,
+    "browser": true
   }
 }
