ci: update config

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,20 +1,50 @@
 kind: pipeline
 name: frontend
 steps:
+  - name: restore-cache
+    image: drillster/drone-volume-cache
+    volumes:
+      - name: cache
+        path: /cache
+    settings:
+      restore: true
+      mount:
+        - ./node_modules
   - name: before-start
     image: node
-    cache:
-      mount:
-        - node_modules
+    volumes:
+      - name: cache
+        path: /cache
     commands:
       - npm install --registry=https://registry.npm.taobao.org -g yarn
       - yarn config set registry https://registry.npm.taobao.org
       - yarn --frozen-lockfile --non-interactive
+    settings:
+      restore: true
+      mount:
+        - ./node_modules
   - name: lint
     image: node
     commands:
       - yarn lint
   - name: test
     image: node
+    volumes:
+      - name: cache
+        path: /cache
     commands:
       - yarn test
+  - name: rebuild-cache
+    image: drillster/drone-volume-cache
+    volumes:
+      - name: cache
+        path: /cache
+    settings:
+      rebuild: true
+      mount:
+        - ./node_modules
+
+volumes:
+  - name: cache
+    host:
+      path: /tmp/cache
