--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
     "@sentry/browser": "^5.6.1",
+    "ant-design-pro": "^2.3.2",
     "antd": "^3.21.4",
     "axios": "^0.19.0",
     "debug": "^4.1.1",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
@@ -39,6 +42,7 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
+    "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
