--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:style --fix"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^16.9.0-4.12.11",
+    "@hot-loader/react-dom": "^16.9.0",
     "@sentry/browser": "^5.6.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^3.21.4",
