--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-react-app": "^9.0.1",
+    "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "concurrently": "^4.1.1",
@@ -75,6 +76,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -88,9 +90,11 @@
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "^0.3.1",
+    "jsonwebtoken": "^8.5.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
