--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "autoprefixer": "^9.6.1",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
