--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0",
+    "@rematch/core": "^1.1.0",
     "@sentry/browser": "^5.6.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^3.21.4",
