feat: add cache-loader for faster speed

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-react-app": "^9.0.1",
     "body-parser": "^1.19.0",
+    "cache-loader": "^4.1.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "concurrently": "^4.1.1",
