--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"yarn dev:app\" \"yarn dev:mock\"",
-    "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot ",
-    "dev:mock": "cross-env nodemon mock/server.js",
+    "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
+    "dev:mock": "cross-env nodemon mock/index.js",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
     "lint": "yarn lint:eslint && yarn lint:style",
@@ -41,6 +41,8 @@
     "@babel/core": "^7.5.5",
     "@svgr/webpack": "^4.3.2",
     "@types/debug": "^4.1.5",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
@@ -67,6 +69,8 @@
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.0",
     "eslint-config-standard": "^13.0.1",
@@ -105,6 +109,7 @@
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
+    "react-test-renderer": "^16.9.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.2.0",
