--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.2.0",
     "semver": "6.3.0",
+    "sinon": "^7.4.2",
     "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
