--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.0",
+    "@types/express-jwt": "^0.0.42",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/numeral": "^0.0.26",
