--- a/.drone.yml
+++ b/.drone.yml
@@ -49,7 +49,7 @@ steps:
       - name: cache
         path: /cache
     commands:
-      - yarn build
+      - yarn build:test
   - name: deploy
     image: dockito/lftp-client
     commands:
