--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
     "dev:mock": "cross-env nodemon mock/index.js",
     "build": "rimraf dist && cross-env NODE_ENV=production PUBLIC_URL='' webpack --config config/webpack.build.config.js --progress --hide-modules",
+    "build:test": "rimraf dist && cross-env NODE_ENV=test PUBLIC_URL='' webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
     "lint": "yarn lint:eslint && yarn lint:style",
     "lint:eslint": "eslint --ext .jsx,.js,.ts,.tsx src",
