Revert "fix: build on test env"
This reverts commit c6a75a66

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,7 +49,7 @@ steps:
       - name: cache
         path: /cache
     commands:
-      - yarn build:test
+      - yarn build
   - name: deploy
     image: dockito/lftp-client
     commands:
