--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@hot-loader/react-dom": "^16.9.0",
     "@sentry/browser": "^5.6.1",
     "ant-design-pro": "^2.3.2",
-    "antd": "^3.21.4",
+    "antd": "^3.24.0",
     "axios": "^0.19.0",
     "debug": "^4.1.1",
     "moment": "^2.24.0",
@@ -52,6 +52,7 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-test-renderer": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^1.13.0",
     "autoprefixer": "^9.6.1",
