--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:style --fix"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^16.9.0",
+    "@hot-loader/react-dom": "^16.10.2",
     "@sentry/browser": "^5.6.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^3.24.0",
@@ -22,15 +22,16 @@
     "debug": "^4.1.1",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
+    "office-ui-fabric-react": "^7.53.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
+    "react": "^16.10.2",
+    "react-app-polyfill": "^1.0.4",
     "react-async-component": "^2.0.0",
-    "react-dev-utils": "^9.0.2",
-    "react-dom": "^16.9.0",
-    "react-hot-loader": "^4.12.11",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.10.2",
+    "react-hot-loader": "^4.12.15",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
     "redux-logger": "^3.0.6",
@@ -38,7 +39,7 @@
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.4",
     "@svgr/webpack": "^4.3.2",
     "@types/debug": "^4.1.5",
     "@types/enzyme": "^3.10.3",
@@ -48,10 +49,10 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/numeral": "^0.0.26",
-    "@types/react": "^16.9.1",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
-    "@types/react-router-dom": "^4.3.4",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.0",
     "@types/react-test-renderer": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^1.13.0",
@@ -125,7 +126,7 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.6.3",
     "url-loader": "2.1.0",
-    "webpack": "^4.39.2",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
