chore: improve webpack build

--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "autoprefixer": "^9.6.1",
-    "babel-eslint": "10.0.2",
-    "babel-jest": "^24.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "autoprefixer": "^9.6.5",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.3",
-    "babel-preset-react-app": "^9.0.1",
+    "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-preset-react-app": "^9.0.2",
     "body-parser": "^1.19.0",
     "cache-loader": "^4.1.0",
     "camelcase": "^5.2.0",
@@ -69,39 +69,39 @@
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "dotenv": "^8.0.0",
-    "dotenv-expand": "^4.2.0",
+    "css-loader": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.5.1",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-config-standard": "^13.0.1",
-    "eslint-loader": "^2.2.1",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "file-loader": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
     "happypack": "^5.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.5",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "identity-obj-proxy": "^3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
-    "less": "^3.9.0",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "morgan": "^1.9.1",
@@ -115,7 +115,6 @@
     "react-test-renderer": "^16.9.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.2.0",
     "semver": "6.3.0",
     "sinon": "^7.4.2",
     "style-loader": "^1.0.0",
@@ -123,14 +122,14 @@
     "stylelint-config-standard": "^18.3.0",
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.6.3",
-    "url-loader": "2.1.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4",
+    "url-loader": "2.2.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
