--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "enzyme": "^3.10.0",
@@ -105,6 +106,8 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "morgan": "^1.9.1",
+    "node-gyp": "^6.0.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -112,9 +115,12 @@
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
+    "precss": "^4.0.0",
     "react-test-renderer": "^16.9.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
+    "scss": "^0.2.4",
     "semver": "6.3.0",
     "sinon": "^7.4.2",
     "style-loader": "^1.0.0",
