--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.2.0",
