--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.10.2",
     "@sentry/browser": "^5.6.1",
+    "@uifabric/react-cards": "^0.109.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^3.24.0",
     "axios": "^0.19.0",
