--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
       "jsx": true
     },
     "useJSXTextNode": true,
-    "project": "./tsconfig.dev.json"
+    "project": "./tsconfig.json"
   },
   "extends": "standard",
   "plugins": [
