--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux-devtools": "^3.5.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "ts-node": "^8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
