refactor: use mobx and remove redux

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "antd": "^3.24.0",
     "axios": "^0.19.0",
     "debug": "^4.1.1",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "office-ui-fabric-react": "^7.53.0",
@@ -32,12 +34,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.15",
-    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "redux-devtools": "^3.5.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "rxjs": "^6.5.3",
     "ts-node": "^8.4.1"
   },
