--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-hot-loader": "^4.12.16",
+    "react-intersection-observer": "^8.25.1",
     "react-router-dom": "^5.1.2",
     "rxjs": "^6.5.3",
     "ts-node": "^8.4.1"
