--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "esnext"
     ],
     "paths": {
-      "~types/*": ["../types/*"],
+      "~type/*": ["../types/*"],
       "~api/*": ["./api/*"],
       "~component/*": ["./components/*"],
       "~store/*": ["./store/*"],
