--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.7.1",
     "@svgr/webpack": "^4.3.2",
     "@types/debug": "^4.1.5",
     "@types/enzyme": "^3.10.3",
