--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-intersection-observer": "^8.25.1",
     "react-router-dom": "^5.1.2",
     "rxjs": "^6.5.3",
+    "rxjs-hooks": "^0.5.2",
     "ts-node": "^8.4.1"
   },
   "devDependencies": {
