--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,7 @@
       "prefer-single"
     ],
     "camelcase": "off",
-    "react/prop-types": "warn",
+    "react/prop-types": "off",
     "react/display-name": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
@@ -60,7 +60,7 @@
         }
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
   },
   "env": {
     "jest": true,
