--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,10 @@
 image: node:current
+cache:
+  key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
+  paths:
+    - node_modules/
+  policy: pull-push
+
 before_script:
   - npm install --registry=https://registry.npm.taobao.org -g yarn
   - yarn config set registry https://registry.npm.taobao.org
