--- a/config/.eslintrc
+++ b/config/.eslintrc
@@ -1,4 +1,11 @@
 {
-  "root": false,
-  "parser": "babel-eslint"
+  "root": true,
+  "parser": "babel-eslint",
+  "extends": [
+    "standard"
+  ],
+  "env": {
+    "node": true,
+    "browser": false
+  }
 }
