--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-loader": "^4.12.18",
     "react-imported-component": "^6.2.1",
     "react-intersection-observer": "^8.25.2",
+    "react-keep-alive": "^2.5.2",
     "react-router-dom": "^5.1.2",
     "rxjs": "^6.5.3",
     "rxjs-hooks": "^0.5.2",
