--- a/.eslintrc
+++ b/.eslintrc
@@ -61,6 +61,9 @@
       }
     ],
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
   "env": {
     "jest": true,
