--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.7.1",
+    "@secto-sessions/dev": "^0.1.0",
     "@svgr/webpack": "^4.3.2",
     "@types/debug": "^4.1.5",
     "@types/enzyme": "^3.10.3",
