--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-  {
+{
   "compilerOptions": {
     "target": "es5",
     "baseUrl": "src",
@@ -8,7 +8,9 @@
       "esnext"
     ],
     "paths": {
-      "~api/*": ["./api/*"],
+      "~api/*": [
+        "./api/*"
+      ],
       "~type": [
         "../types"
       ],
